[gd_scene load_steps=9 format=3 uid="uid://bmsetn3spvcdm"]

[ext_resource type="Texture2D" uid="uid://brrwyl4p34tgo" path="res://addons/objects/nvme.png" id="1_7whj0"]
[ext_resource type="Script" path="res://scripts/item.gd" id="2_lyqp5"]
[ext_resource type="PackedScene" uid="uid://b3p1tukliho5n" path="res://UI/interect_ui.tscn" id="3_f11je"]
[ext_resource type="Texture2D" uid="uid://bs7m0nujq4iej" path="res://addons/particles/star_09.png" id="4_vo4u3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dehw8"]
radius = 480.0

[sub_resource type="Animation" id="Animation_xu6qb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("brightness:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("brightness:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fddl4"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("brightness:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("brightness:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_umu5q"]
_data = {
"RESET": SubResource("Animation_xu6qb"),
"open": SubResource("Animation_fddl4")
}

[node name="Nvme" type="Sprite2D"]
z_index = 1
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_7whj0")
script = ExtResource("2_lyqp5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_dehw8")

[node name="InterectUi" parent="." instance=ExtResource("3_f11je")]
visible = false
offset_top = -140.0
offset_bottom = -140.0
scale = Vector2(3, 3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_umu5q")
}
autoplay = "open"

[node name="brightness" type="Sprite2D" parent="."]
modulate = Color(1, 0.823529, 0, 1)
z_index = -1
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_vo4u3")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
